package com.ikno.ikdata.control.biModules.exceptions;

public abstract class CustomException extends Exception {
    public CustomException(String message) {
        super(message);
    }
}
