package com.ikno.ikdata.control.biModules.exceptions;

public class FileServiceException extends CustomException {
    public FileServiceException(String message) {
        super(message);
    }
}
