package com.ikno.ikdata.control.biModules.exceptions;

public class ScriptExecutionException extends CustomException {
    public ScriptExecutionException(String message) {
        super(message);
    }
}
